[~] General Preferences Updated to Use Strings
+ General pref strings in strings.xml
~ General prefs activity uses strings

}!{

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,19 @@
 
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
-    <string name="pref_description_autosave">Allows auto-saving whenever new characters are entered.</string>
+    <string name="pref_general__autosave">Autosave</string>
+    <string name="pref_general__autosave_desc">Allows auto-saving whenever new characters are entered.</string>
+    <string name="pref_general__autosave_number">Autosave After</string>
+    <string name="pref_general__autosave_number_desc">Save after adding this many characters.</string>
+    <string name="pref_general__logging">Logging</string>
+    <string name="pref_general__log_calls">Auto-Log Calls</string>
+    <string name="pref_general__log_calls_desc">Auto-logs incoming and outgoing calls from native call logs.</string>
+    <string name="pref_general__files">Files</string>
+    <string name="pref_general__app_color">App Color</string>
+    <string name="pref_general__markdown">Markdown Styles</string>
+    <string name="pref_general__markdown_desc">Enable use of markdown styles to render markdown in text.</string>
+    <string name="pref_general__scroll">Fancy Scroll</string>
+    <string name="pref_general__scroll_desc">Use a faster, smoother, animated scroll</string>
 
     <!-- Theme Settings -->
     <string name="pref_themes__darkmode">Dark Mode</string>
