--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,12 @@
 <resources>
     <string name="app_name">&appname;</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="app_menu_item__color_change">Color</string>
+    <string name="app_menu_item__export_preferences">Export Preferences</string>
+    <string name="app_menu_item__new_file">New</string>
+    <string name="app_menu_item__open_file">New</string>
+    <string name="app_menu_item__save_file">Save</string>
+    <string name="app_menu_item__settings">Settings</string>
 
     <!-- Strings related to Settings -->
 
